syntax = "proto3";
// option go_package="path;name"
// path表示go文件存放的目录
// name表示生成的go文件所属的包名
option go_package = "../service";
// 指定对应文件生成出来的pkg
package service;

message ProductRequest {
  int32 product_id = 1;
}

message ProductResponse {
  int32 product_stock = 1;
}

// 定义服务主体
service ProductService{
  rpc GetProductStock(ProductRequest) returns(ProductResponse);
}